src/shared/adjusters/css/adjusters.css
/* ... */
/*
    Style for magnifier.invertColours adjuster
*/
.gpii-iconCheck-magnifierInvertColours:before {
    content: "\e002";
    font-size: 70px !important;
}

/*
    Style for icon check adjuster
*/
.gpii-iconCheckAdjusterCheckIcon {
    background-color: #FFFFFF;
    border: 1px solid #636C7C;
    border-radius: 4px 4px 4px 4px;
    color: #FFFFFF;
    font-size: calc(1em + 2px);
    height: 1em;
    position: relative;
    width: calc(1em + 2px);
}

input:checked + label > .gpii-iconCheckAdjusterCheckIcon,
input:checked + label > div > label > .gpii-iconCheckAdjusterCheckIcon {
    background-color: 636C7C;
}

input:checked + label > .gpii-iconCheckAdjusterCheckIcon:before,
input:checked + label > div > label > .gpii-iconCheckAdjusterCheckIcon:before {
    content: "\e00a";
}

.gpii-iconCheckAdjusterArea {
	cursor: pointer;
	display: block;
	background-color: white;
	margin: 2px;
	border-radius: 5px;
}

.gpii-iconCheckAdjusterDescription {
	font-size: 1em !important;
}

.gpii-iconCheckAdjusterContainer {
	display:table;
    height: 70px;
}

.gpii-table-cell-valign-label {
	cursor: inherit;
	display: table-cell !important;
	vertical-align: middle;
	width: 100%;
	padding-right: 10px;
}

/*
    Style for icomoon font icons
*/
.gpii-prefsEditor-adjusterIcons-icomoon {
    font-family: 'icomoon';
}

/*
    Style for showCrosshairs adjuster
*/

.gpii-iconCheck-showCrosshairs:before {
    content: "\e00f";
    font-size: 70px !important;
}

/*
    Style for followingElement adjuster
*/

.gpii-followingElement-mouseCursorIcon, .gpii-followingElement-textCursorIcon, .gpii-followingElement-keyboardFocusIcon {
    font-family: 'icomoon';
    font-size: 70px !important;
}

.gpii-followingElement-mouseCursorIcon:before {
    content: "\e007";
}

.gpii-followingElement-textCursorIcon:before {
    content: "\e000";
}

.gpii-followingElement-keyboardFocusIcon:before {
    content: "\e005";
}

.gpii-iconCheckAdjusterAreaNoBorder {
	border-radius: 0px !important;
}

.gpii-iconCheckAdjusterAreaTopOnlyBorder {
	border-radius: 5px 5px 0px 0px !important;
}

.gpii-iconCheckAdjusterAreaBottomOnlyBorder {
	border-radius: 0px 0px 5px 5px !important;
}

/*
    Style for contrastTheme adjuster
*/
.gpii-contrastThemeLabel {
	font-size: 1.5em !important;
	border: 2px solid #000000 !important;
	border-radius: 0 !important;
	margin-right: 20px !important;
	padding: 5px !important;
	height: 2em !important;
	width: 2em !important;
	cursor: pointer;
}

.fl-prefsEditor .fl-choice label {
	line-height: 2em !important;
}

.gpii-contrastThemeIndicator {
	margin: 0 0 0 0.75em !important;
}

.gpii-contrast-contrastOptions {
	display: inline-block;
}

/*
    Style for onOffSwitch adjuster
*/
.gpii-onOffSwitch-container {
	display: inline-block;
    padding-bottom: 1em;
    padding-top: 1em;
    width: 100%;
}

